Fixed overlap div on button

--- a/assets/stylesheets/lobby.css
+++ b/assets/stylesheets/lobby.css
@@ -168,7 +168,7 @@ p {
 }
 
 #mainRoomBox {
-	height: 100%;
+	height: 90%;
 	width: 100%;
 	/*resize: none;*/
 	/*position: absolute;*/
